# Weightless-Automated-Learning-of-Task-Essential-Representations

./: .gitignore  README.md  pyproject.toml
docs/: algorithm.md  cli.md  features.md
walter/: __init__.py  cli.py  mmar.py  score.py
walter/features/: __init__.py  base.py  cqt.py  f0.py  stereo.py
walter/gemini/: __init__.py  client.py
